--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
