--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,25 @@
         "start": "node dist/app.js",
         "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
         "clean": "rm -rf dist",
-        "prebuild": "npm run clean"
+        "prebuild": "npm run clean",
+        "format": "npx prettier . --write"
     },
     "author": "Dilanka Rathnasiri",
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.21.2",
+        "express": "^5.1.0",
         "nodeman": "^1.1.2"
     },
     "devDependencies": {
+        "@eslint/js": "^9.25.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.13.5",
-        "typescript": "^5.7.3"
+        "eslint": "^9.25.0",
+        "globals": "^16.0.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.30.1"
     }
 }
